Bug 1324064: Stop accessing printer devices in the child when printing via parent. r=jimm

This should remove all access to printer devices on Windows, there might by some other OS specific code which still does.